--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   "dependencies": {
     "eslint": "^4.19.1",
     "from-xml": "^0.1.6",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
-    "puppeteer": "^1.4.0",
+    "puppeteer": "^1.14.0",
     "ramda": "^0.25.0"
   }
 }
